<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.example.customtoastapplication.CustomToastPresenterImpl" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_custom_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:onClick="@{()-> presenter.showToastButtonOnClickListener()}"
            android:text="@string/text_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_left_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:onClick="@{()-> presenter.leftToastButtonClickListener()}"
            android:text="@string/text_left_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btn_custom_toast_activity_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_right_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:onClick="@{()-> presenter.rightToastButtonClickListener()}"
            android:text="@string/text_right_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btn_left_toast_activity_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_top_left_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:onClick="@{()-> presenter.topLeftButtonClickListener()}"
            android:text="@string/text_top_left_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btn_right_toast_activity_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_top_right_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:onClick="@{()-> presenter.topRightButtonClickListener()}"
            android:text="@string/text_top_right_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btn_top_left_toast_activity_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_bottom_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:onClick="@{()-> presenter.bottomToastButtonClickListener()}"
            android:text="@string/text_bottom_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_custom_toast_activity_main" />

        <Button
            android:id="@+id/btn_top_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:onClick="@{()-> presenter.topToastButtonClickListener()}"
            android:text="@string/text_top_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_bottom_toast_activity_main" />

        <Button
            android:id="@+id/btn_bottom_left_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:onClick="@{()-> presenter.bottomLeftButtonClickListener()}"
            android:text="@string/text_bottom_left_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_top_toast_activity_main" />

        <Button
            android:id="@+id/btn_bottom_right_toast_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:onClick="@{()-> presenter.bottomRightButtonClickListener()}"
            android:text="@string/text_bottom_right_toast_btn_value"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_bottom_left_toast_activity_main" />
    </android.support.constraint.ConstraintLayout>
</layout>